# pixels-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  renovate.json
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: config.rs  display.rs  dma.rs  main.rs  rm67162.rs
