[package]
name = "pixels-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
    "esp32s3",
    "log-04",
    "unstable",
    "psram",
] }

esp-rtos = { version = "0.1.1", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
    "log-04",
] }

esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s3"] }
log = "0.4.27"

embassy-net = { version = "0.7.0", features = [
    "dhcpv4",
    "log",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.0", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.0", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }

#switch to official mipi-dsi crate when newer version that 0.9.0 is released
mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
drivers = { git = "https://github.com/psytraxx/s3-display-amoled-touch-rs.git", tag = "v0.8.0" }
heapless = { version = "0.9.0", default-features = false, features = [] }
embedded-graphics = { version = "0.8.1", features = [] }
embedded-hal = { version = "1.0.0", features = [] }
micromath = { version = "2.1.0", features = ["vector", "quaternion"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
embedded-hal-bus = { version = "0.3.0", features = [] }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
